--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "fs": "0.0.1-security",
-    "inquirer": "^8.1.5"
+    "inquirer": "^8.1.5",
+    "path": "^0.12.7"
   }
 }
